# screen_brightness_pro

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: screen_brightness_pro.podspec
ios/Classes/: ScreenBrightnessProPlugin.swift
lib/: screen_brightness_pro.dart  screen_brightness_pro_method_channel.dart  screen_brightness_pro_platform_interface.dart  screen_brightness_pro_web.dart
linux/: CMakeLists.txt  screen_brightness_pro_plugin.cc
linux/include/screen_brightness_pro/: screen_brightness_pro_plugin.h
macos/: screen_brightness_pro.podspec
macos/Classes/: ScreenBrightnessProPlugin.swift
test/: screen_brightness_pro_method_channel_test.dart  screen_brightness_pro_test.dart
windows/: CMakeLists.txt  screen_brightness_pro_plugin.cpp  screen_brightness_pro_plugin.h  screen_brightness_pro_plugin_c_api.cpp
windows/test/: screen_brightness_pro_plugin_test.cpp
(+9 files in other folders)
